--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
 	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/4-filters.css">
-	<link rel="shortcut icon" type="image/jpg" href="images/icon.png" />
+	<link rel="shortcut icon" type="image/jpg" href="images/icon.png">
     <title>AirBnB clone</title>
 </head>
 
@@ -19,7 +18,7 @@
 	<div class="container">
 		<section class="filters">
 			<div class="locations">
-				<h3><States/h3>
+				<h3>States</h3>
 				<h4>Internet, Kitchen...</h4>
 			</div>
 			<button type="button">Search</button>
@@ -29,5 +28,4 @@
 		<p>Best School</p>
 	</footer>
 </body>
-
 </html>
