--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/4-filters.css">
-	<link rel="shortcut icon" type="image/jpg" href="images/icon.png" />
+	<link rel="shortcut icon" type="image/jpg" href="images/icon.png">
     <title>AirBnB clone</title>
 </head>
 
@@ -19,7 +19,7 @@
 	<div class="container">
 		<section class="filters">
 			<div class="locations">
-				<h3><States/h3>
+				<h3>States</h3>
 				<h4>California, Arizona...</h4>
 				<ul class="popover">
 					<li>
