--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/4-filters.css">
-	<link rel="shortcut icon" type="image/jpg" href="images/icon.png" />
+	<link rel="shortcut icon" type="image/jpg" href="images/icon.png">
     <title>AirBnB clone</title>
 </head>
 
@@ -19,7 +19,7 @@
 	<div class="container">
 		<section class="filters">
 			<div class="locations">
-				<h3><States/h3>
+				<h3>States</h3>
 				<h4>California, Arizona...</h4>
 				<ul class="popover">
 					<li>
@@ -124,10 +124,10 @@
 					<strong>Owner:</strong>Esperanza Araque
 				 </div>
 				 <div class="description">
-					 <p>Spectacular apartment located in the exclusive sector of Morros, with privileged access to
-					         the beaches of La Boquilla, swimming pool, gym, Turkish ba       3 bathrooms, kitchen, equipped with air conditioners, hot water, refrigerator, stove, washer,
-						                 dryer, Wi Fi internet, balcony in the room with beautiful sea view. It is the perfect space
-								                 for a family break by the sea.</p>
+					 <p>Spectacular apartment located in the exclusive sector of Morros, with privileged access to the
+                     beaches of La Boquilla, swimming pool, gym, Turkish ba 3 bathrooms, kitchen, equipped with air
+                     conditioners, hot water, refrigerator, stove, washer, dryer, Wi Fi internet, balcony in the room
+                     with beautiful sea view. It is the perfect space for a family break by the sea.</p>
 				 </div>
 			</article>
 		</section>
